Prevent horizontal scrolling on mobile due to comments

--- a/themes/pelican-hss/static/css/style.css
+++ b/themes/pelican-hss/static/css/style.css
@@ -174,7 +174,7 @@ div.Warning {
 
 #comments {
     padding-top: 2em;
-    float: left;
+    overflow-wrap: break-word;
 }
 
 #archives {
